--- a/app/views/trades/index.html.slim
+++ b/app/views/trades/index.html.slim
@@ -1,4 +1,3 @@
-h1 Web家計簿
 / 検索欄
 / = search_form_for @q, class: 'mb-5' do | f |
 /   / 勘定科目の検索欄
@@ -9,14 +8,12 @@ h1 Web家計簿
 /   .form-group
 /     = f.submit '条件検索', class: 'btn btn-outline-primary'
 
-= link_to '家計簿データ新規作成', new_trade_path, class:'btn btn-primary new-btn'
-
-.mb-3
-  table
-    tr
-      td = paginate @searched_trades
-    tr
-      td = page_entries_info @searched_trades
+.mb-3.display-nav-area
+  .flex-column.justify-content-start
+    .span = paginate @searched_trades
+    .span = page_entries_info @searched_trades
+  .new-btn-area
+    = link_to '家計簿データ新規作成', new_trade_path, class:'btn btn-primary'
 
 table.table.table-hover
   thead.thead-default
@@ -31,11 +28,7 @@ table.table.table-hover
   tbody
     - @searched_trades.each do | trade |
       tr
-        td
-          - if trade.exchange == 0
-            = '収入'
-          - else
-            = '支出'
+        td = trade.exchangeName
         td = trade.category.name
         td = trade.name
         td = trade.price
